<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Confirmar Registro</string>
    <string name="label_go_to_login">¿Ya tiene una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_crear_citas">Reservar cita</string>
    <string name="btn_mis_citas">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_crear_cita">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_especialidad">Especialidad</string>
    <string name="label_tipo">Tipo de cita</string>
    <string name="label_descripcion">Descripción</string>
    <string name="tipo1">Consulta</string>
    <string name="tipo2">Examen</string>
    <string name="tipo3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>

    <string name="item_cita_id">Cita médica %1$d</string>
    <string name="item_cita_date">Atención el día %1$s</string>
    <string name="item_cita_time">A las %1$s</string>
    <string name="label_mis_citas">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_exit_title">¿Estás seguro que deseas salir?</string>
    <string name="dialog_create_cita_exit_messaje">Si abandonas el registro, los datos que habias ingresado se perderán.</string>
    <string name="dialog_cita_exit_positive_btn">Si, salir</string>
    <string name="dialog_cita_exit_negative_btn">Continuar registro</string>
    <string name="validate_cita_description">La descripción es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_cita">Datos de la cita</string>
    <string name="validate_cita_fecha">Es necesario seleccionar una fecha</string>
    <string name="validate_cita_hora">Es necesario definir una hora para la cita</string>
    <string name="error_loading_specialty">Ocurrió un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrio un problema al cargar los médicos</string>
    <string name="error_loading_hours">No se ha podido cargar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha, para ver sus horas disponibles.</string>
    <string name="label_horas_no_disponible">Lo sentimos! No se encontraron horas disponibles para el médico</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y contraseña</string>
    <string name="item_cita_created_at">Esta cita se registró el día %1$s con la siguiente descripción:</string>
</resources>
