<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CrearCitasActivity"
    android:id="@+id/cvStep1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"

    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_descripcion" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_especialidad" />

        <Spinner
            android:id="@+id/spinnerEspecialidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_tipo" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupType"
            android:layout_marginBottom="8dp"
            android:checkedButton="@id/rbType1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo1" />

            <RadioButton
                android:id="@+id/rbType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo2" />

            <RadioButton
                android:id="@+id/rbType3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo3" />

        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_navigate_next"
            android:text="@string/btn_next" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
